# sk2_project_server

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Readme.md  main.cpp
src/: CMakeLists.txt  addLib.h
src/events/: CMakeLists.txt  EpollCloseCallback.h  EpollController.cpp  EpollController.h  EpollListener.h
src/game/: CMakeLists.txt  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameController.cpp  GameController.h  GameMessageIdentifier.cpp  GameMessageIdentifier.h  IngameMessageFilter.h  Logger.cpp  Logger.h  Map.cpp  Map.h  MessageFilter.h  NewPlayerMessageFilter.h  Player.cpp  Player.h  PlayerSpawner.cpp  PlayerSpawner.h  PlayerTest.cpp  Positioned.h  ScoreBoard.h  Tile.h  UniFactory.cpp  Unit.cpp  Unit.h  UnitFactory.cpp  UnitFactory.h
src/game/core/: GameConfig.cpp  GameConfig.h  Logger.cpp  Logger.h  Map.cpp  Map.h  MessageFilter.cpp  MessageFilter.h  Point.h  Positioned.h  Tile.h  UnitFactory.cpp  UnitFactory.h
src/game/message/: AttackUnitsMessage.cpp  AttackUnitsMessage.h  CMakeLists.txt  GameJoinedMessage.cpp  GameJoinedMessage.h  GameMessage.h  KickMessage.cpp  KickMessage.h  LobbyJoinedMessage.cpp  LobbyJoinedMessage.h  MoveUnitsMessage.cpp  MoveUnitsMessage.h  PlayMessage.cpp  PlayMessage.h  PlayerJoinedMessage.cpp  PlayerJoinedMessage.h  PlayerLeftMessage.h  PlayersScoreChangedMessage.cpp  PlayersScoreChangedMessage.h  SimpleMessage.h  SimpleMessageOut.cpp  SimpleMessageOut.h  UnitAttackedMessage.cpp  UnitAttackedMessage.h  UnitDestroyedMessage.cpp  UnitDestroyedMessage.h  UnitMovedMessage.cpp  UnitMovedMessage.h  UnitSpawnedMessage.cpp  UnitSpawnedMessage.h  messageHelper.cpp  messageHelper.h  messageHelperTest.cpp
src/game/message/in/: AttackUnitsMessage.cpp  AttackUnitsMessage.h  CMakeLists.txt  GameMessage.h  MoveUnitsMessage.h  PlayMessage.cpp  PlayMessage.h  SimpleMessage.h
src/net/: Buffer.cpp  Buffer.h  BufferTest.cpp  CMakeLists.txt  Client.cpp  Client.h  ClientCallback.h  ClientDisconnectionCallback.cpp  ClientDisconnectionCallback.h  Message.cpp  Message.h  MessageCallback.h  MessageIdentifier.cpp  MessageIdentifier.h  MessageOut.cpp  MessageOut.h  MessageWriter.cpp  MessageWriter.h  NettyClient.cpp  NettyClient.h  Server.cpp  Server.h  ServerCloseCallback.cpp  ServerCloseCallback.h  server.cpp  server.h
src/spec/: spec.h
test/: CMakeLists.txt  CMakeLists.txt.in  addLibTest.h
test/events/: CMakeLists.txt  EpollControllerTest.h
test/net/: CMakeLists.txt  ServerTest.h
