add_library(Buffer OBJECT Buffer)
add_library(MessageIdentifier OBJECT MessageIdentifier)
add_library(MessageWriter OBJECT MessageWriter)

add_executable(BufferTest BufferTest.cpp $<TARGET_OBJECTS:Buffer>)
add_test(NAME BufferTest-properly_writes_and_reads_single_value COMMAND BufferTest properly_writes_and_reads_single_value)
add_test(NAME BufferTest-properly_writes_and_reads_multiple_values COMMAND BufferTest properly_writes_and_reads_multiple_values)
add_test(NAME BufferTest-properly_reads_multiple_values COMMAND BufferTest properly_reads_multiple_values)
add_test(NAME BufferTest-properly_reads_char_by_char COMMAND BufferTest properly_reads_char_by_char)
add_test(NAME BufferTest-returns_proper_buffer_size COMMAND BufferTest returns_proper_buffer_size)