add_subdirectory(in)
add_subdirectory(out)

add_library(messageHelper OBJECT messageHelper)

add_executable(messageHelperTest messageHelperTest.cpp
    $<TARGET_OBJECTS:Buffer>
    $<TARGET_OBJECTS:messageHelper>
)
add_test(NAME messageHelperTest-converts_small_integer_into_char_array COMMAND messageHelperTest converts_small_integer_into_char_array)
add_test(NAME messageHelperTest-converts_large_integer_into_char_array COMMAND messageHelperTest converts_large_integer_into_char_array)
add_test(NAME messageHelperTest-converts_small_integer_back_from_char_array COMMAND messageHelperTest converts_small_integer_back_from_char_array)
add_test(NAME messageHelperTest-converts_large_integer_back_from_char_array COMMAND messageHelperTest converts_large_integer_back_from_char_array)